--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -143,7 +143,7 @@
                     <TabPane prefHeight="458.0" prefWidth="582.0" rotateGraphic="true" tabClosingPolicy="UNAVAILABLE">
                        <tabs>
                           <Tab text="Information">
-                             <SplitPane dividerPositions="0.2358974358974359, 0.6128205128205129" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
+                             <SplitPane dividerPositions="0.2358974358974359, 0.6128205128205129, 0.5" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
                                    <TitledPane maxHeight="1000.0" prefHeight="89.0" prefWidth="582.0" text="Education Info" wrapText="true">
                                       <content>
@@ -179,7 +179,7 @@
                                          </TableView>
                                       </content>
                                    </TitledPane>
-                                   <TitledPane maxHeight="400.0" prefHeight="232.0" prefWidth="682.0" text="Position" wrapText="true">
+                                   <TitledPane maxHeight="400.0" prefHeight="141.0" prefWidth="682.0" text="Position" wrapText="true">
                                       <content>
                                          <TableView id="posTable" fx:id="posTable" maxWidth="5000.0">
                                             <columns>
@@ -202,7 +202,24 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-
+                                   <TitledPane maxHeight="400.0" prefHeight="20.0" prefWidth="612.0" text="Industry" wrapText="true">
+                                      <content>
+                                         <TableView id="posTable" fx:id="indTable" maxWidth="5000.0">
+                                            <columns>
+                                               <TableColumn id="indFX" fx:id="indFX" minWidth="-1.0" prefWidth="700.0" text="Industry" />
+                                            </columns>
+                                            <cursor>
+                                               <Cursor fx:constant="DEFAULT" />
+                                            </cursor>
+                                            <columnResizePolicy>
+                                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                            </columnResizePolicy>
+                                         </TableView>
+                                      </content>
+                                      <cursor>
+                                         <Cursor fx:constant="NONE" />
+                                      </cursor>
+                                   </TitledPane>
                                 </items>
                              </SplitPane>
                           </Tab>
