--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -158,6 +158,9 @@
                                                 <columnResizePolicy>
                                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                 </columnResizePolicy>
+                                                <cursor>
+                                                   <Cursor fx:constant="DEFAULT" />
+                                                </cursor>
                                          </TableView>
                                       </content>
                                       <cursor>
@@ -176,12 +179,15 @@
                                                 <columnResizePolicy>
                                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                 </columnResizePolicy>
+                                                <cursor>
+                                                   <Cursor fx:constant="DEFAULT" />
+                                                </cursor>
                                          </TableView>
                                       </content>
                                    </TitledPane>
                                    <TitledPane maxHeight="400.0" prefHeight="141.0" prefWidth="682.0" text="Position" wrapText="true">
                                       <content>
-                                         <TableView id="posTable" fx:id="posTable" maxWidth="5000.0">
+                                         <TableView id="posTable" fx:id="posTable" maxWidth="5000.0" prefHeight="98.0" prefWidth="610.0">
                                             <columns>
                                                <TableColumn fx:id="posFX" minWidth="-1.0" prefWidth="700.0" text="Position" />
                                             </columns>
@@ -202,9 +208,9 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane maxHeight="400.0" prefHeight="20.0" prefWidth="612.0" text="Industry" wrapText="true">
+                                   <TitledPane maxHeight="400.0" prefHeight="134.0" prefWidth="612.0" text="Industry" wrapText="true">
                                       <content>
-                                         <TableView id="posTable" fx:id="indTable" maxWidth="5000.0">
+                                         <TableView id="posTable" fx:id="indTable" maxWidth="5000.0" minHeight="50.0">
                                             <columns>
                                                <TableColumn id="indFX" fx:id="indFX" minWidth="-1.0" prefWidth="700.0" text="Industry" />
                                             </columns>
