--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -1,30 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="700.0" prefWidth="850.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="700.0" prefWidth="850.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="5" />
    </top>
@@ -161,41 +144,19 @@
                     <TabPane prefHeight="500.0" prefWidth="582.0" rotateGraphic="true" tabClosingPolicy="UNAVAILABLE">
                        <tabs>
                           <Tab text="Information">
-                             <SplitPane dividerPositions="0.2358974358974359, 0.6128205128205129, 0.5" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
+                             <SplitPane dividerPositions="0.22306525037936267, 0.4977238239757208, 0.8437025796661608" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
-                                       <TitledPane collapsible="false" maxHeight="400.0" minHeight="100.0" prefHeight="200.0" text="Work Experience" wrapText="true">
-                                          <content>
-                                             <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0">
-                                                <columns>
-                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title" />
-                                                   <TableColumn fx:id="companyFX" prefWidth="149.0" text="Company" />
-                                                   <TableColumn fx:id="employmentTypeFX" prefWidth="89.0" text="Employment Type" />
-                                                   <TableColumn fx:id="startDateFX" prefWidth="98.0" text="Start Date" />
-                                                   <TableColumn fx:id="endDateFX" prefWidth="102.0" text="End Date" />
-                                                   <TableColumn fx:id="descriptionFX" prefWidth="102.0" text="Description" />
-                                                </columns>
-                                                <columnResizePolicy>
-                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                                </columnResizePolicy>
-                                                <cursor>
-                                                   <Cursor fx:constant="DEFAULT" />
-                                                </cursor>
-                                             </TableView>
-                                          </content>
-                                          <cursor>
-                                             <Cursor fx:constant="NONE" />
-                                          </cursor>
-                                       </TitledPane>
-                                   <TitledPane collapsible="false" maxHeight="400.0" minHeight="100.0" prefHeight="200.0" text="Education Info" wrapText="true">
+
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="200.0" text="Education Information" wrapText="true">
                                       <content>
                                          
                                          <TableView fx:id="eduInfoTblFX" maxHeight="500.0" minHeight="50.0" prefHeight="0.0">
                                             <columns>
-                                               <TableColumn fx:id="universityFX" prefWidth="142.0" text="University" />
-                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" text="Subject" />
-                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" text="Degree" />
-                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" text="Grade" />
-                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" text="Graduation Year" />
+                                               <TableColumn fx:id="universityFX" prefWidth="142.0" style="-fx-alignment: CENTER;" text="University" />
+                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" style="-fx-alignment: CENTER;" text="Subject" />
+                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" style="-fx-alignment: CENTER;" text="Degree" />
+                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" style="-fx-alignment: CENTER;" text="Grade" />
+                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" style="-fx-alignment: CENTER;" text="Graduation Year" />
                                             </columns>
                                                 <columnResizePolicy>
                                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -280,7 +241,7 @@
                                       <items>
                                          <TableView id="posTable" fx:id="posTable" maxHeight="600.0" maxWidth="2000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="600">
                                             <columns>
-                                               <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" text="Position" />
+                                               <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" style="-fx-alignment: CENTER;" text="Position" />
                                             </columns>
                                                 <cursor>
                                                    <Cursor fx:constant="DEFAULT" />
@@ -292,7 +253,7 @@
 
                                          <TableView id="posTable" fx:id="indTable" maxHeight="1000.0" maxWidth="5000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="0.0">
                                             <columns>
-                                               <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" text="Industry" />
+                                               <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" style="-fx-alignment: CENTER;" text="Industry" />
                                             </columns>
                                             <cursor>
                                                <Cursor fx:constant="DEFAULT" />
@@ -317,19 +278,35 @@
                                           <content>
                                              <SplitPane dividerPositions="0.5405405405405406" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
                                                 <items>
-                                                   <SplitPane dividerPositions="0.2618657937806874, 0.5008183306055647, 0.723404255319149" prefHeight="160.0" prefWidth="200.0">
+                                                   <SplitPane dividerPositions="0.2618657937806874, 0.5008183306055647, 0.7561374795417348" prefHeight="160.0" prefWidth="200.0">
                                                      <items>
-                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-                                                         <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-                                                         <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                            <children>
+                                                               <Text layoutX="13.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                            </children>
+                                                         </AnchorPane>
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                            <children>
+                                                               <Text layoutX="5.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                            </children>
+                                                         </AnchorPane>
+                                                         <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                            <children>
+                                                               <Text layoutX="10.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                            </children>
+                                                         </AnchorPane>
+                                                         <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                            <children>
+                                                               <Text layoutX="8.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                            </children>
+                                                         </AnchorPane>
                                                      </items>
                                                    </SplitPane>
-                                                   <SplitPane dividerPositions="0.3486088379705401" prefHeight="160.0" prefWidth="200.0">
+                                                   <SplitPane dividerPositions="0.353518821603928" prefHeight="160.0" prefWidth="200.0">
                                                      <items>
-                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="213.0">
+                                                       <AnchorPane maxWidth="213.0" minHeight="0.0" minWidth="213.0" prefHeight="31.0" prefWidth="213.0">
                                                             <children>
-                                                               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" prefHeight="30.0" prefWidth="213.0" style="-fx-background-color: #2980b9;" text="Comments of the Fairteam Member" textAlignment="CENTER" textFill="WHITE">
+                                                               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" layoutY="-5.0" maxWidth="213.0" minWidth="213.0" prefHeight="35.0" prefWidth="213.0" style="-fx-background-color: #2980b9;" text="Comments of the Fairteam Member" textAlignment="CENTER" textFill="WHITE">
                                                                   <font>
                                                                      <Font name="System Bold" size="12.0" />
                                                                   </font>
@@ -338,7 +315,7 @@
                                                          </AnchorPane>
                                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
-                                                               <Text layoutX="8.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="378.13671875" />
+                                                               <TextField layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="388.0" style="-fx-background-color: transparent;" />
                                                             </children>
                                                          </AnchorPane>
                                                      </items>
