--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -1,29 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <!--
                             <SplitPane dividerPositions="0.5" orientation="VERTICAL">
@@ -77,12 +60,12 @@
                                       </SplitPane>
                                        -->
 
-<BorderPane prefHeight="700.0" prefWidth="900.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="700.0" prefWidth="900.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="5" />
    </top>
    <center>
-   <SplitPane dividerPositions="0.2644110275689223" prefHeight="625.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+   <SplitPane dividerPositions="0.2644110275689223" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
       <items>
       <!--  -->
          <SplitPane dividerPositions="0.29505813953488375, 0.7659883720930233" maxWidth="400.0" orientation="VERTICAL" prefHeight="511.0" prefWidth="400.0">
@@ -186,7 +169,7 @@
                <TitledPane alignment="CENTER" animated="false" collapsible="false" maxHeight="1000.0" minWidth="100.0" prefHeight="592.0" prefWidth="200.0" text="Additional Information">
                      <content>
                         <GridPane prefHeight="283.0" prefWidth="198.0">
-                           <Label fx:id="lblAddInfo" alignment="CENTER" prefHeight="112.0" prefWidth="200.0" textFill="WHITE" wrapText="true" />
+                           <Label fx:id="lblAddInfo" alignment="TOP_LEFT" prefHeight="112.0" prefWidth="200.0" textFill="WHITE" wrapText="true" />
                            <columnConstraints>
                               <ColumnConstraints />
                            </columnConstraints>
@@ -216,12 +199,12 @@
                                           <content>
                                              <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0">
                                                 <columns>
-                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title" />
-                                                   <TableColumn fx:id="companyFX" prefWidth="149.0" text="Company" />
-                                                   <TableColumn fx:id="employmentTypeFX" prefWidth="89.0" text="Employment Type" />
-                                                   <TableColumn fx:id="startDateFX" prefWidth="98.0" text="Start Date" />
-                                                   <TableColumn fx:id="endDateFX" prefWidth="102.0" text="End Date" />
-                                                   <TableColumn fx:id="descriptionFX" prefWidth="102.0" text="Description" />
+                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" style="-fx-alignment: CENTER;" text="Title" />
+                                                   <TableColumn fx:id="companyFX" prefWidth="149.0" style="-fx-alignment: CENTER;" text="Company" />
+                                                   <TableColumn fx:id="employmentTypeFX" prefWidth="89.0" style="-fx-alignment: CENTER;" text="Employment Type" />
+                                                   <TableColumn fx:id="startDateFX" prefWidth="98.0" style="-fx-alignment: CENTER;" text="Start Date" />
+                                                   <TableColumn fx:id="endDateFX" prefWidth="102.0" style="-fx-alignment: CENTER;" text="End Date" />
+                                                   <TableColumn fx:id="descriptionFX" prefWidth="102.0" style="-fx-alignment: CENTER;" text="Description" />
                                                 </columns>
                                                 <columnResizePolicy>
                                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -235,16 +218,16 @@
                                              <Cursor fx:constant="NONE" />
                                           </cursor>
                                        </TitledPane>
-                                   <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Education Info" wrapText="true">
+                                   <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Education Infomation" wrapText="true">
                                       <content>
                                          
                                          <TableView fx:id="eduInfoTblFX" maxHeight="500.0" minHeight="50.0" prefHeight="0.0">
                                             <columns>
-                                               <TableColumn fx:id="universityFX" prefWidth="142.0" text="University" />
-                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" text="Subject" />
-                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" text="Degree" />
-                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" text="Grade" />
-                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" text="Graduation Year" />
+                                               <TableColumn fx:id="universityFX" prefWidth="142.0" style="-fx-alignment: CENTER;" text="University" />
+                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" style="-fx-alignment: CENTER;" text="Subject" />
+                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" style="-fx-alignment: CENTER;" text="Degree" />
+                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" style="-fx-alignment: CENTER;" text="Grade" />
+                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" style="-fx-alignment: CENTER;" text="Graduation Year" />
                                             </columns>
                                                 <columnResizePolicy>
                                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -258,7 +241,7 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="700.0" minHeight="150.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
+                                   <TitledPane alignment="TOP_LEFT" collapsible="false" maxHeight="700.0" minHeight="150.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
                                       <content>
                                          <SplitPane dividerPositions="0.20297029702970298, 0.400990099009901, 0.5825082508250825, 0.7739273927392739" maxWidth="5000.0" prefHeight="179.0" prefWidth="560.0">
                                          <items>
@@ -323,12 +306,12 @@
                                          </SplitPane>
                                       </content>
                                    </TitledPane>
-                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="700.0" minHeight="94.0" prefHeight="94.0" prefWidth="613.0" text="Fields of Interest" wrapText="true">
+                                   <TitledPane alignment="TOP_LEFT" collapsible="false" maxHeight="700.0" minHeight="94.0" prefHeight="94.0" prefWidth="613.0" text="Fields of Interest" wrapText="true">
                                       <SplitPane dividerPositions="0.5" maxWidth="5000.0" prefHeight="219.0">
                                       <items>
                                          <TableView id="posTable" fx:id="posTable" maxHeight="600.0" maxWidth="2000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="600">
                                             <columns>
-                                               <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" text="Position" />
+                                               <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" style="-fx-alignment: CENTER;" text="Position" />
                                             </columns>
                                                 <cursor>
                                                    <Cursor fx:constant="DEFAULT" />
@@ -340,7 +323,7 @@
 
                                          <TableView id="posTable" fx:id="indTable" maxHeight="1000.0" maxWidth="5000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="0.0">
                                             <columns>
-                                               <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" text="Industry" />
+                                               <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" style="-fx-alignment: CENTER;" text="Industry" />
                                             </columns>
                                             <cursor>
                                                <Cursor fx:constant="DEFAULT" />
@@ -370,36 +353,7 @@
 
                              </ScrollPane>
                           </Tab>
-                           <Tab text="Applicant Ratings">
-                              <SplitPane dividerPositions="0.6818873668188736, 0.8432267884322678" maxHeight="657.0" minHeight="30.0" orientation="VERTICAL" prefHeight="657.0" prefWidth="650.0">
-                              <Tab text="Key Competencies">
-                                 <content>
-                                    <BorderPane prefHeight="200.0" prefWidth="200.0">
-                                       <center>
-                                          <GridPane style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-                                            <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="35.99999109903972" vgrow="SOMETIMES" />
-                                              <RowConstraints maxHeight="420.0" minHeight="0.0" prefHeight="191.33334859212243" vgrow="SOMETIMES" />
-                                              <RowConstraints maxHeight="345.6666564941406" minHeight="10.0" prefHeight="221.33333333333337" vgrow="SOMETIMES" />
-                                                <RowConstraints maxHeight="328.66678873697913" minHeight="10.0" prefHeight="180.66666666666663" vgrow="SOMETIMES" />
-                                                <RowConstraints maxHeight="242.0001220703125" minHeight="10.0" prefHeight="29.3333740234375" vgrow="SOMETIMES" />
-                                            </rowConstraints>
-                                             <children>
-                                                <PieChart fx:id="pLPieChart" style="-fx-border-color: black;" title="Programming languages" GridPane.rowIndex="1" />
-                                                <PieChart fx:id="bSPieChart" style="-fx-border-color: black;" title="Bussiness Skills" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                                <PieChart fx:id="dbPieChart" style="-fx-border-color: black;" title="Data Base" GridPane.rowIndex="2" />
-                                                <PieChart fx:id="langPieChart" style="-fx-border-color: black;" title="Languages" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                                <PieChart fx:id="psPieChart" style="-fx-border-color: black;" title="Professional Software" GridPane.rowIndex="3" />
-                                             </children>
-                                          </GridPane>
-                                       </center>
-                                    </BorderPane>
-                                 </content>
-                              </Tab>
+
                            <Tab onSelectionChanged="#onShowRating" text="Applicant Ratings">
                               <SplitPane dividerPositions="0.5555555555555556, 0.786910197869102" maxHeight="657.0" minHeight="30.0" orientation="VERTICAL" prefHeight="657.0" prefWidth="650.0">
                                  <items>
@@ -417,21 +371,16 @@
                                              </padding>
 
                                        </HBox>
-                                          <PieChart id="pieChart" fx:id="chart" onMouseExited="#hidePieChartDetails" onMouseMoved="#showPieChartDetails" title="Hr-Rating" />
-                                          <HBox prefHeight="100.0" prefWidth="200.0">
-                                             <children>
-                                                <Label fx:id="pieLabel" prefHeight="17.0" prefWidth="71.0" />
-                                             </children>
-                                          </HBox>
+                                          <PieChart id="pieChart" fx:id="chart" prefHeight="416.0" prefWidth="650.0" title="Hr-Rating" />
 
                                     </VBox>
-                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the Fairteam Member // Name can be changed" wrapText="true">
+                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the Fairteam Member" wrapText="true">
                                           <content>
-                                             <TextField fx:id="txtImpFX" alignment="TOP_LEFT" prefHeight="90.0" prefWidth="648.0" />
+                                             <TextField fx:id="txtImpFX" alignment="TOP_LEFT" prefHeight="135.0" prefWidth="648.0" />
                                           </content></TitledPane>
-                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the HR Member // Name can be changed" wrapText="true">
+                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the HR Member" wrapText="true">
                                           <content>
-                                             <TextField fx:id="txtImpHRFX" alignment="TOP_LEFT" prefHeight="72.0" prefWidth="648.0" />
+                                             <TextField fx:id="txtImpHRFX" alignment="TOP_LEFT" prefHeight="115.0" prefWidth="648.0" />
                                           </content></TitledPane>
                                  </items>
                               </SplitPane>
