--- a/frontend/src/app/applicants/applications-upload/applications-upload.page.html
+++ b/frontend/src/app/applicants/applications-upload/applications-upload.page.html
@@ -13,55 +13,30 @@
   <div class="main-container">
     <div class="content">
       <div class="main-description custom-style">
-        {{'applicantsUploadPage.uploadingProgressMessage' |
-        translate:{uploadSize:uploadingCount,totalSize:totalSize} }}
+        {{statusMessage}}
       </div>
-      <div class="spinner-css">
-        <span *ngIf="!isSuccess && !isError"> <ion-spinner></ion-spinner></span>
-        <span *ngIf="isSuccess">
+      <div class="status-icon">
+        <div *ngIf="isAPIInProgress; else completedState">
+          <ion-spinner></ion-spinner>
+        </div>
+
+        <ng-template #completedState>
           <ion-icon
-            name="checkmark-circle-outline"
+            name="{{statusIconName}}"
             size="large"
-            class="success-icon"
+            color="{{statusIconColor}}"
           ></ion-icon
-        ></span>
-        <span *ngIf="isError">
-          <ion-icon
-            name="close-circle-outline"
-            class="failure-icon"
-            size="large"
-          ></ion-icon>
-        </span>
+        ></ng-template>
       </div>
     </div>
 
-    <div class="buttons-container button-css">
+    <div *ngIf="isAPIInProgress">
       <button
         class="fancy-button align center second-button"
         (click)="goBack()"
       >
         {{'commonLables.cancel' | translate}}
       </button>
-    </div>
-  </div>
-
-  <div class="main-container">
-    <div class="content">
-      <span *ngIf="!isError">
-        <div class="main-description upload-info">
-          {{'applicantsUploadPage.nApplicationUploadedSuccessMessage' |
-          translate:{uploadedSize:uploadingCount-1} }}
-        </div>
-      </span>
-      <span *ngIf="isError">
-        <span *ngIf="uploadingCount>1" class="upload-info">
-          {{'applicantsUploadPage.napplicantsSavedMessage' |
-          translate:{uploadedSize:uploadingCount-1} }}
-        </span>
-        <div class="main-description error-info">
-          {{errorMessage}}
-        </div>
-      </span>
     </div>
   </div>
 </ion-content>
